objects/Project_Role_Rollup__c.object
<CustomObject>
    <label>Project Role Rollup</label>
    <nameField>
        <displayFormat>PRR-{00000000}</displayFormat>
        <label>Project Role Rollup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Role Rollups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <referenceTo>Time__c</referenceTo>
        <relationshipName>Project_Role_Rollups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Planned_hrs__c</fullName>
        <label>Planned (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Role__c</fullName>
        <label>Project Role</label>
        <referenceTo>Project_Role__c</referenceTo>
        <relationshipName>Project_Roll_Rollups</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>